tests/test181.rael
load :Types
log :Types:Range(1, 2, 3, 4, 5)
